# UniMod3

./: .gitignore  README.md  filecopier.py  meson.build  meson_options.txt  userConfigurationCreator.py
src/: config.cpp  config.h  main.cpp  unimod.cpp  unimod.h
subprojects/UniModLoader/: main.cpp  meson.build
subprojects/sol2/sol/: stack_core.hpp  usertype_core.hpp  usertype_metatable.hpp
